tests/baselines/reference/controlFlowNullTypeAndLiteral.errors.txt
controlFlowNullTypeAndLiteral.ts(15,12): error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
controlFlowNullTypeAndLiteral.ts(17,12): error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
controlFlowNullTypeAndLiteral.ts(21,15): error TS2322: Type 'null' is not assignable to type 'string'.


==== controlFlowNullTypeAndLiteral.ts (3 errors) ====
    // Repros from #23771
    
    const myNull: null = null;
    const objWithValMaybeNull: { val: number | null } = { val: 1 };
    const addOne = function (num: number) {
        return num + 1;
    }
    
    if (objWithValMaybeNull.val !== null)
        addOne(objWithValMaybeNull.val);
    if (objWithValMaybeNull.val !== myNull)
        addOne(objWithValMaybeNull.val);
    
    if (objWithValMaybeNull.val === null)
        addOne(objWithValMaybeNull.val);    // Error
               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
    if (objWithValMaybeNull.val === myNull)
        addOne(objWithValMaybeNull.val);    // Error
               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
    
    function f(x: number | null) {
        if(x === myNull) {
            const s: string = x;  // Error
                  ~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        }
    }
    